fix red/blue colors for dark mode

--- a/css/vision.css
+++ b/css/vision.css
@@ -22,10 +22,10 @@
   --fg: #fff;
   --ctrlbg: #222;
   --highlight: #0ff;
-  --tranared: #03f;
+  --tranared: #008;
   --spotbg: var(--tranared);
   --spotbgbw: var(--fg);
-  --tranagreen: #f00;
+  --tranagreen: #500;
   --trackred: var(--fg);
   --trackredbg: #ff0000;
   --homefilter: saturate(0) brightness(100);
